added option to hide mute/unmute button in channels

--- a/Telegram/Telegram-iOS/be.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/be.lproj/Localizable.strings
@@ -96,6 +96,7 @@
 "PtgSettings.JumpToNextUnreadChannel.TopFirst" = "Верхнія спачатку";
 "PtgSettings.JumpToNextUnreadChannel.BottomFirst" = "Ніжнія спачатку";
 "PtgSettings.HideSignatures" = "Хаваць подпісы";
+"PtgSettings.HideMuteUnmuteButton" = "Хаваць кнопку «(Не) апавяшчаць»";
 
 "Conversation.ContextMenuSaveMessage" = "Захаваць паведамленне";
 
