--- a/Telegram/Telegram-iOS/en.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/en.lproj/Localizable.strings
@@ -98,6 +98,7 @@
 "PtgSettings.JumpToNextUnreadChannel.TopFirst" = "Top First";
 "PtgSettings.JumpToNextUnreadChannel.BottomFirst" = "Bottom First";
 "PtgSettings.HideSignatures" = "Hide Signatures";
+"PtgSettings.HideMuteUnmuteButton" = "Hide Mute/Unmute Button";
 
 "Conversation.ContextMenuSaveMessage" = "Save Message";
 
