--- a/Telegram/Telegram-iOS/uk.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/uk.lproj/Localizable.strings
@@ -32,6 +32,8 @@
 "PtgSettings.JumpToNextUnreadChannel.BottomFirst" = "Нижні спочатку";
 "PtgSettings.HideSignatures" = "Приховати підписи";
 "PtgSettings.HideMuteUnmuteButton" = "Приховати кнопку «(Не) сповіщати»";
+"PtgSettings.SwipeActionsForChats" = "Дії при проведенні по чатах";
+"PtgSettings.SwipeActionsForChatsHelp" = "Вимкніть, щоб запобігти випадковим діям при проведенні вліво або вправо по чатах у списку чатів. Всі ці дії також доступні в контекстному меню чатів.";
 
 "Conversation.ContextMenuSaveMessage" = "Зберегти повідомлення";
 
