--- a/Telegram/Telegram-iOS/en.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/en.lproj/Localizable.strings
@@ -99,6 +99,8 @@
 "PtgSettings.JumpToNextUnreadChannel.BottomFirst" = "Bottom First";
 "PtgSettings.HideSignatures" = "Hide Signatures";
 "PtgSettings.HideMuteUnmuteButton" = "Hide Mute/Unmute Button";
+"PtgSettings.SwipeActionsForChats" = "Swipe Actions for Chats";
+"PtgSettings.SwipeActionsForChatsHelp" = "Turn off to prevent accidental actions when swiping chats left or right in the chat list. All of those actions are also available in the chat context menu.";
 
 "Conversation.ContextMenuSaveMessage" = "Save Message";
 
