--- a/Telegram/Telegram-iOS/ru.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/ru.lproj/Localizable.strings
@@ -99,6 +99,8 @@
 "PtgSettings.HideMuteUnmuteButton" = "Скрывать кнопку «Вкл./Убрать звук»";
 "PtgSettings.SwipeActionsForChats" = "Действия при смахивании чатов";
 "PtgSettings.SwipeActionsForChatsHelp" = "Выключите, чтобы предотвратить случайные действия при смахивании чатов влево или вправо в списке чатов. Все эти действия также доступны в контекстном меню чатов.";
+"PtgSettings.SwipeToOpenStoryCamera" = "Смахивание для записи историй";
+"PtgSettings.SwipeToOpenStoryCameraHelp" = "Выключите, чтобы предотвратить случайное открытие камеры для записи историй при пролистывании списка чатов.";
 
 "Conversation.ContextMenuSaveMessage" = "Сохранить сообщение";
 
