--- a/Telegram/Telegram-iOS/uk.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/uk.lproj/Localizable.strings
@@ -34,6 +34,8 @@
 "PtgSettings.HideMuteUnmuteButton" = "Приховати кнопку «(Не) сповіщати»";
 "PtgSettings.SwipeActionsForChats" = "Дії при проведенні по чатах";
 "PtgSettings.SwipeActionsForChatsHelp" = "Вимкніть, щоб запобігти випадковим діям при проведенні вліво або вправо по чатах у списку чатів. Всі ці дії також доступні в контекстному меню чатів.";
+"PtgSettings.SwipeToOpenStoryCamera" = "Проведення для запису історій";
+"PtgSettings.SwipeToOpenStoryCameraHelp" = "Вимкніть, щоб запобігти випадковому відкриттю камери для запису історій під час гортання списку чатів.";
 
 "Conversation.ContextMenuSaveMessage" = "Зберегти повідомлення";
 
