--- a/Telegram/Telegram-iOS/en.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/en.lproj/Localizable.strings
@@ -82,11 +82,10 @@
 "PtgSettings.UseFullWidth" = "Use Full Screen Width";
 "PtgSettings.EnableLiveText" = "Live Text";
 "PtgSettings.EnableLiveTextHelp" = "Automatically perform text recognition and bar code detection (e.g. QR-code) on each image you preview in fullscreen. Turn it off to save battery life.";
-"PtgSettings.VoiceToTextHeader" = "Voice-to-Text Conversion";
-"PtgSettings.VoiceToTextPremiumAccountsImplmentation" = "Implementation for Premium Accounts";
+"PtgSettings.VoiceToTextPremiumAccountsImplmentation" = "Voice-to-Text Conversion";
 "PtgSettings.VoiceToTextPremiumAccountsImplmentation.Telegram" = "Telegram";
 "PtgSettings.VoiceToTextPremiumAccountsImplmentation.Apple" = "Apple";
-"PtgSettings.VoiceToTextHelp" = "If you have Premium accounts, you can choose which implementation they use for voice-to-text conversion, Telegram or Apple. For non-Premium accounts, Apple services are always used.";
+"PtgSettings.VoiceToTextHelp" = "For account with Telegram Premium subscription you can choose which implementation to use for voice-to-text conversion, Telegram or Apple. Accounts without Telegram Premium subscription always use Apple services.";
 "PtgSettings.DefaultCameraForVideos" = "Default Camera for Videos";
 "PtgSettings.DefaultCameraForVideos.Front" = "Front";
 "PtgSettings.DefaultCameraForVideos.Rear" = "Rear";
