show creation date for groups too

--- a/Telegram/Telegram-iOS/be.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/be.lproj/Localizable.strings
@@ -5,8 +5,9 @@
 "Settings.Version" = "Vartagram %1$@ (%2$@)\nНа аснове арыгінальнага Telegram %3$@";
 
 "PtgSettings.Title" = "Vartagram";
-"PtgSettings.ShowPeerId" = "Паказваць ID профіляў";
-"PtgSettings.ShowChannelCreationDate" = "Паказваць дату стварэння каналаў";
+"PtgSettings.ShowProfileInfoHeader" = "Паказваць інфармацыю аб профілі";
+"PtgSettings.ShowPeerId" = "ID профілю";
+"PtgSettings.ShowChannelCreationDate" = "Дата стварэння каналаў і суполак";
 "PtgSettings.SuppressForeignAgentNotice" = "Хаваць меткі іншаагентаў РФ";
 "PtgSettings.EnableQuickReaction" = "Хуткія рэакцыі";
 "PtgSettings.EnableQuickReactionHelp" = "Уключыце, каб хутка адпраўляць рэакцыі, двойчы націскаючы на паведамленні ці націскаючы на існуючыя рэакцыі. Выключыце, каб пазбегнуць выпадковых рэакцый.";
