--- a/Telegram/Telegram-iOS/en.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/en.lproj/Localizable.strings
@@ -5,8 +5,9 @@
 "Settings.Version" = "Vartagram %1$@ (%2$@)\nBased on original Telegram %3$@";
 
 "PtgSettings.Title" = "Vartagram";
-"PtgSettings.ShowPeerId" = "Show Profile ID";
-"PtgSettings.ShowChannelCreationDate" = "Show Channel Creation Date";
+"PtgSettings.ShowProfileInfoHeader" = "Show Profile Information";
+"PtgSettings.ShowPeerId" = "Profile ID";
+"PtgSettings.ShowChannelCreationDate" = "Creation Date of Channels and Groups";
 "PtgSettings.SuppressForeignAgentNotice" = "Hide Russian \"Foreign Agent\" Labels";
 "PtgSettings.EnableQuickReaction" = "Quick Reactions";
 "PtgSettings.EnableQuickReactionHelp" = "Turn on to quickly send reactions by double-tapping on a message or tapping on existing reactions. Turn off to prevent accidental reactions.";
